Fix mistake of missing flex-wrap property. Now cards can wrap to the next line instead of getting squished.

--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,35 @@
   padding: 0;
   box-sizing: border-box;
 }
-/* 
+
+body {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 .card-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 80vh;
-} */
+  flex-wrap: wrap;
+  margin: 3rem;
+  gap: 2rem;
+  height: 100vh;
+}
 
 h1 {
   margin: 2rem auto;
   text-align: center;
+  color: whitesmoke;
 }
 
 .card {
   background-color: blanchedalmond;
-  border: 3px solid black;
-  border-radius: 4px;
+  border: 4px solid black;
+  border-radius: 8px;
   height: 200px;
   width: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   text-align: center;
   transform-style: preserve-3d;
   transition: transform 1s;
